<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="430dp"
        android:layout_height="270dp"
        android:contentDescription="@string/plat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/couscous" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="245dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/couscous_royal"
        android:textColor="#FC6011"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_image" />

    <RatingBar
        android:id="@+id/item_rating"
        android:layout_width="201dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <TextView
        android:id="@+id/item_text"
        android:layout_width="330dp"
        android:layout_height="229dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="84dp"
        android:text="@string/le_couscous_marocain_est_une_sp_cialit_culinaire_du_maghreb_il_repr_sente_un_m_lange_simplement_de_deux_plats_principaux_il_s_agit_de_la_semoule_de_bl_cuite_dans_un_couscoussier_la_vapeur_et_d_un_corps_gras_qui_peut_tre_soit_du_beurre_ou_g_n_ralement_de_l_huile_d_olive"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_rating" />

    <ImageView
        android:id="@+id/item_horloge"
        android:layout_width="65dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/horloge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_text"
        app:srcCompat="@drawable/ic_baseline_access_time_24" />

    <TextView
        android:id="@+id/item_time"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:layout_marginEnd="144dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/time"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/item_horloge"
        app:layout_constraintEnd_toStartOf="@+id/item_favorite"
        app:layout_constraintTop_toTopOf="@+id/item_horloge"
        app:layout_constraintVertical_bias="0.521" />

    <ImageView
        android:id="@+id/item_favorite"
        android:layout_width="64dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_text"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

    <Button
        android:id="@+id/item_button"
        android:layout_width="216dp"
        android:layout_height="80dp"
        android:layout_marginTop="124dp"
        android:background="#FC6011"
        android:fontFamily="sans-serif-black"
        android:text="@string/view_recipe"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
