<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/textView"
                android:layout_width="321dp"
                android:layout_height="48dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="28dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/recipy_with_your_fridge_s_ingredients"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/quick_actions"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="130dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/best_for_you"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/best_for_you_recycler"
                android:orientation="horizontal"
                android:layout_width="401dp"
                android:layout_height="406dp"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                app:layout_constraintEnd_toStartOf="@+id/imageView8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="@+id/imageView9"
                app:srcCompat="@drawable/cocktaililage" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                app:srcCompat="@drawable/cakeimage" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/imageView6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:srcCompat="@drawable/saladimage" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/imageView9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/removebg" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_navigation"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"/>



</androidx.constraintlayout.widget.ConstraintLayout>